// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DownloadPullSecret /> with error should render 1`] = `
<Button
  isDisabled={true}
  onClick={[Function]}
  style={
    Object {
      "display": "inline",
    }
  }
  variant="secondary"
>
  Download pull secret
</Button>
`;

exports[`<DownloadPullSecret /> with token should render 1`] = `
<Button
  isDisabled={false}
  onClick={[Function]}
  style={
    Object {
      "display": "inline",
    }
  }
  variant="secondary"
>
  Download pull secret
</Button>
`;
